adding jquery things

--- a/index.html
+++ b/index.html
@@ -2,21 +2,27 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-	
+
 	<title></title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.4/foundation.min.css">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+
 </head>
+
 <body>
-	<div class=center>
-		<h3>Julie</h3>
+
+	<div class="row">
+	  <div class="large-3 columns">
+	  	<h3><i class="fa fa-camera-retro"></i>  Julie is awesome</h3>
+	  </div>
+	  <div class="large-6 columns">
+	  	<h3>Tim</h3>
+	  </div>
+	  <div class="large-3 columns">
+	  	<h3>Chris</h3>
+	  </div>
 	</div>
-	<div class=center>
-		<h3>Tim</h3>
-	</div>
-	<div class=center>
-		<h3>Chris</h3>
-	</div>
-	<div class=center>
-		<h3>Grace</h3>
+
 </body>
 </html>
