--- a/counter.html
+++ b/counter.html
@@ -14,7 +14,7 @@
 		<h3>Pugs!</h3>
 
 		<div>
-			<button id="decrease"> - </button>
+			<button id="decrease"> -- </button>
 			<button id="increase"> + </button>
 		</div>
 	</div>
