--- a/counter.html
+++ b/counter.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/counter.css"
+		<link rel="stylesheet" type="text/css" href="CSS/counter.css"
 
 	</head>
 
